--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,104 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    android:background="#87cefa"
+    tools:context=".SplashActivity">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/start_splash"
+        android:layout_marginTop="10dp"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorPrimaryDark"
-        app:cardCornerRadius="150dp"
-        app:cardPreventCornerOverlap="false">
+        />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"
-            android:src="@drawable/login_photo" />
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/blacksword"
-        android:text="Life is a journey"
-        android:textSize="40dp"
-        android:textColor="#333333"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="50dp"
-        android:text="Email"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/edit_email"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="textEmailAddress"
-        android:hint="Please enter your email"
-        android:textColorHint="#808080"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="50dp"
-        android:text="Password"
-        android:textSize="20dp"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/edit_password"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:inputType="textPassword"
-        android:hint="Please enter your password"
-        android:textColorHint="#808080"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#87cefa"
-            android:text="LOGIN"
-            android:textSize="20dp"></Button>
-
-        <Button
-            android:id="@+id/btn_to_register"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:background="#87cefa"
-            android:text="REGISTER"
-            android:textSize="20dp"></Button>
-    </LinearLayout>
-</LinearLayout>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center_horizontal"-->
+<!--        android:text="Lief is"-->
+<!--        android:textStyle="bold"-->
+<!--        android:layout_marginTop="75dp"-->
+<!--        android:textAppearance="@style/TextAppearance.AppCompat.Display2"-->
+<!--        android:textColor="#ffffff" />-->
+</FrameLayout>
