--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,9 +81,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center">
 
             <Button
@@ -92,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="#87cefa"
+                android:gravity="center"
                 android:text="LOGIN"
                 android:textSize="20dp"></Button>
 
@@ -102,6 +104,7 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="30dp"
                 android:background="#87cefa"
+                android:gravity="center"
                 android:text="REGISTER"
                 android:textSize="20dp"></Button>
         </LinearLayout>
