--- a/app/src/main/res/layout/fragment_fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_fragment_travel.xml
@@ -1,132 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentTravel"
-    android:orientation="vertical">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillViewport="true"
+    android:background="@color/colorPrimary">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:text="맞춤형 여행지를 추천해드립니다."
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        tools:context=".FragmentTravel"
+        android:orientation="vertical"
+        android:id="@+id/fragment_travel">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:text="지역"
-        android:textSize="20dp">
-    </TextView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/asia"
-            android:layout_marginLeft="15dp"
-            android:layout_width="120dp"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="아시아" />
+            android:layout_marginTop="30dp"
+            android:gravity="center_horizontal"
+            android:text="맞춤형 여행지를 추천해드립니다."
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-        <CheckBox
-            android:id="@+id/europe"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="유럽" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <CheckBox
-            android:id="@+id/Sapporo"
-            android:layout_width="120dp"
+        </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="아메리카" />
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="지역"
+            android:textSize="20dp">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/asia"
+                android:layout_marginLeft="15dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="아시아" />
+
+            <CheckBox
+                android:id="@+id/europe"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="유럽" />
+
+            <CheckBox
+                android:id="@+id/america"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="아메리카" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/oceania"
+                android:layout_marginLeft="15dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="오세아니아" />
+
+            <CheckBox
+                android:id="@+id/middle_east"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="중동" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="여행 유형"
+            android:textSize="20dp">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/food"
+                android:layout_marginLeft="15dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="먹고 싶어" />
+
+            <CheckBox
+                android:id="@+id/scenery"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="보고 싶어" />
+
+            <CheckBox
+                android:id="@+id/activity"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="놀고 싶어" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/rest"
+                android:layout_marginLeft="15dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="쉬고 싶어" />
+
+            <CheckBox
+                android:id="@+id/extreme"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="죽고 싶어"
+                android:textStyle="bold"
+                android:textColor="#A52A2A"/>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:text="예산"
+            android:textSize="20dp">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/low_money"
+                android:layout_marginLeft="15dp"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="저예산" />
+
+            <CheckBox
+                android:id="@+id/high_money"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="상관 없음" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/next_button"
+            android:src="@drawable/airplane"/>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/america"
-            android:layout_marginLeft="15dp"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="아메리카" />
-
-        <CheckBox
-            android:id="@+id/middle_east"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="중동" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="여행 유형"
-        android:textSize="20dp">
-    </TextView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/food"
-            android:layout_marginLeft="15dp"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="먹고 싶어" />
-
-        <CheckBox
-            android:id="@+id/scenery"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="보고 싶어" />
-
-        <CheckBox
-            android:id="@+id/activity"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="놀고 싶어" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/rest"
-            android:layout_marginLeft="15dp"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="쉬고 싶어" />
-    </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
