--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".LoginActivity">
+        tools:context=".LoginActivity"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <androidx.cardview.widget.CardView
             android:layout_width="250dp"
@@ -57,7 +59,8 @@
             android:layout_marginLeft="20dp"
             android:inputType="textEmailAddress"
             android:hint="Please enter your email"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#808080"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +79,8 @@
             android:layout_marginLeft="20dp"
             android:inputType="textPassword"
             android:hint="Please enter your password"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#808080"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -92,7 +96,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="#87cefa"
+                android:background="@drawable/grid_item_radius_3"
                 android:gravity="center"
                 android:text="LOGIN"
                 android:textSize="20dp"></Button>
@@ -103,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="30dp"
-                android:background="#87cefa"
+                android:background="@drawable/grid_item_radius_3"
                 android:gravity="center"
                 android:text="REGISTER"
                 android:textSize="20dp"></Button>
