--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
-        tools:context=".RegisterActivity">
+        tools:context=".RegisterActivity"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <TextView
             android:layout_width="match_parent"
@@ -57,7 +59,8 @@
             android:layout_marginLeft="20dp"
             android:inputType="textEmailAddress"
             android:hint="Please enter your name"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#808080"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +79,8 @@
             android:layout_marginLeft="20dp"
             android:inputType="textEmailAddress"
             android:hint="Please enter your phone number"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#808080"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,7 +99,8 @@
             android:layout_marginLeft="20dp"
             android:inputType="textEmailAddress"
             android:hint="Please enter your email"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#808080"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -114,7 +119,8 @@
             android:layout_marginLeft="20dp"
             android:inputType="textPassword"
             android:hint="Please enter your password"
-            android:textColorHint="#808080"/>
+            android:textColorHint="#808080"
+            />
 
         <TextView
             android:layout_width="wrap_content"
