--- a/app/src/main/res/layout/fragment_fragment_travel2.xml
+++ b/app/src/main/res/layout/fragment_fragment_travel2.xml
@@ -33,4 +33,11 @@
         </com.google.android.gms.maps.MapView>
     </androidx.cardview.widget.CardView>
 
+    <Button
+        android:id="@+id/goto_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="goto_image_gallery"
+        />
+
 </LinearLayout>
