--- a/app/src/main/res/layout/fragment_fragment_travel2.xml
+++ b/app/src/main/res/layout/fragment_fragment_travel2.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".FragmentTravel2">
 
@@ -32,5 +34,61 @@
             android:gravity="center">
         </com.google.android.gms.maps.MapView>
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#EC6156"
+            app:cardCornerRadius="25dp">
+
+            <ImageView
+                android:id="@+id/galleryButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/button_1"
+                android:scaleType="centerCrop">
+            </ImageView>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="25dp"
+            android:background="#F5BF4F"
+            app:cardCornerRadius="25dp">
+
+            <ImageView
+                android:id="@+id/refreshButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/button_2"
+                android:scaleType="centerCrop">
+            </ImageView>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="25dp"
+            android:background="#62C655"
+            app:cardCornerRadius="25dp">
+
+            <ImageView
+                android:id="@+id/contactsButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/button_3"
+                android:scaleType="centerCrop">
+            </ImageView>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
