--- a/app/src/main/res/layout/fragment_fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_fragment_travel.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorPrimary"
     android:id="@+id/fragment_travel"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,14 +15,14 @@
         android:gravity="center_horizontal"
         android:text="맞춤형 여행지를 추천해드립니다."
         android:textSize="20dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:id="@+id/text_rela"/>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </androidx.cardview.widget.CardView>
     <TextView
+        android:id="@+id/text_rela2"
+        android:layout_below="@+id/text_rela"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -32,10 +32,12 @@
     </TextView>
 
     <LinearLayout
+        android:layout_below="@+id/text_rela2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/rel_lay1">
 
         <CheckBox
             android:id="@+id/asia"
@@ -61,6 +63,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/re_lay2"
+        android:layout_below="@+id/rel_lay1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -82,6 +86,9 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/text_rela3"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/re_lay2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -91,6 +98,8 @@
     </TextView>
 
     <LinearLayout
+        android:id="@+id/lay_li1"
+        android:layout_below="@+id/text_rela3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -120,6 +129,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lay_li2"
+        android:layout_below="@+id/lay_li1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -143,6 +154,9 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/text_real3"
+        android:layout_below="@+id/lay_li2"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -152,6 +166,8 @@
     </TextView>
 
     <LinearLayout
+        android:id="@+id/linear5"
+        android:layout_below="@+id/text_real3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -174,10 +190,12 @@
     </LinearLayout>
 
     <ImageView
+        android:layout_below="@+id/linear5"
+        android:layout_centerHorizontal="true"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/next_button"
         android:src="@drawable/airplane"/>
-</LinearLayout>
+</RelativeLayout>
