--- a/app/src/main/res/layout/fragment_fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_fragment_travel.xml
@@ -31,6 +31,11 @@
         android:textSize="20dp">
     </TextView>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_below="@+id/text_rela2"
         android:layout_width="match_parent"
@@ -197,5 +202,6 @@
         android:layout_marginTop="30dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/next_button"
+        android:background="?actionBarItemBackground"
         android:src="@drawable/airplane"/>
 </RelativeLayout>
