--- a/app/src/main/res/layout/content_image_inlarge.xml
+++ b/app/src/main/res/layout/content_image_inlarge.xml
@@ -44,8 +44,8 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="left|top"
         android:layout_margin="16dp"
         android:clickable="true"
